# src/domain/responses/get_config.response.go
@@ -1,10 +1,11 @@
-package aggregates
+package responses
 
 import (
 	"github.com/ssssshel/sp-api/src/domain/entities"
 )
 
-type Config struct {
+type GetConfigResponse struct {
 	Currencies       []*entities.Currency        `json:"currencies"`
 	TransactionTypes []*entities.TransactionType `json:"transaction_types"`
+	MonthYears       []*GetConfigDatesResponse   `json:"month_years"`
 }
