# src/domain/responses/get_config_dates.response.go
@@ -1,0 +1,6 @@
+package responses
+
+type GetConfigDatesResponse struct {
+	Months []int `json:"months"`
+	Years  []int `json:"years"`
+}
